--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <header>hello</header>
     <main>
       <section>hero</section>
+      <section>main</section>
     </main>
   </body>
 </html>
