--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <main>
       <section>hero</section>
       <section>main</section>
+      <section>job</section>
     </main>
   </body>
 </html>
