--- a/index.html
+++ b/index.html
@@ -4,13 +4,29 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>hello</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>hello</header>
+    <header>
+      <div class="header container">
+        <a class="logo-link" href="./index.html">
+          <svg class="logo" width="148" height="12">
+            <use href="./images/icons.svg#icon-logo.svg"></use>
+          </svg>
+        </a>
+        <button class="btn-menu">
+          <svg class="icon-burger" width="32" height="32">
+            <use href="./images/icons.svg#icon-burger.svg"></use>
+          </svg>
+        </button>
+      </div>
+    </header>
     <main>
-      <section>hero</section>
-      <section>main</section>
-      <section>my job</section>
+      <section class="hero">Lorem</section>
     </main>
   </body>
 </html>
