--- a/index.html
+++ b/index.html
@@ -11,22 +11,90 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <div class="header container">
-        <a class="logo-link" href="./index.html">
-          <svg class="logo" width="148" height="12">
-            <use href="./images/icons.svg#icon-logo.svg"></use>
-          </svg>
-        </a>
-        <button class="btn-menu">
-          <svg class="icon-burger" width="32" height="32">
-            <use href="./images/icons.svg#icon-burger.svg"></use>
-          </svg>
-        </button>
+    <section class="sas">
+      <div class="con-c container">
+        <div class="vav"></div>
+        <div class="mom"></div>
       </div>
-    </header>
-    <main>
-      <section class="hero">Lorem</section>
-    </main>
+    </section>
+    <section></section>
+    <section class="vegetables-section">
+      <div class="container">
+        <h2 class="section-title">organic <span>vegetables</span></h2>
+        <p class="vegetables-section-text">
+          Our organic vegetables are hand-picked from local farms and delivered
+          straight to your doorstep, ensuring that you get the freshest and most
+          nutritious produce possible.
+        </p>
+        <ul class="vegetables-list">
+          <li class="vegetables-item">
+            <h3 class="vegetables-subtitle">eggplant</h3>
+            <p class="vegetables-text">60 uan/kg</p>
+            <img
+              srcset="./images/eggplant.png 1x, ./images/eggplant@2x.png 2x"
+              src="./images/eggplant.png"
+              alt="eggplant"
+              width="282"
+              heiht="243"
+            />
+          </li>
+          <li class="vegetables-item">
+            <h3 class="vegetables-subtitle">leek</h3>
+            <p class="vegetables-text">50 uan/kg</p>
+            <img
+              srcset="./images/leek.png 1x, ./images/leek@2x.png 2x"
+              src="./images/leek.png"
+              alt="leek"
+              width="282"
+              heiht="243"
+            />
+          </li>
+          <li class="vegetables-item">
+            <h3 class="vegetables-subtitle">mushrooms</h3>
+            <p class="vegetables-text">40 uan/kg</p>
+            <img
+              srcset="./images/mushrooms.png 1x, ./images/mushrooms@2x.png 2x"
+              src="./images/mushrooms.png"
+              alt="mushrooms"
+              width="282"
+              heiht="243"
+            />
+          </li>
+          <li class="vegetables-item">
+            <h3 class="vegetables-subtitle">corn</h3>
+            <p class="vegetables-text">60 uan/kg</p>
+            <img
+              srcset="./images/corn.png 1x, ./images/corn@2x.png 2x"
+              src="./images/corn.png"
+              alt="corn"
+              width="282"
+              heiht="243"
+            />
+          </li>
+          <li class="vegetables-item">
+            <h3 class="vegetables-subtitle">sweet potatoes</h3>
+            <p class="vegetables-text">50 uan/kg</p>
+            <img
+              srcset="./images/potatoes.png 1x, ./images/potatoes@2x.png 2x"
+              src="./images/potatoes.png"
+              alt="potatoes"
+              width="282"
+              heiht="243"
+            />
+          </li>
+          <li class="vegetables-item">
+            <h3 class="vegetables-subtitle">carrot</h3>
+            <p class="vegetables-text">40 uan/kg</p>
+            <img
+              srcset="./images/carrot.png 1x, ./images/carrot@2x.png 2x"
+              src="./images/carrot.png"
+              alt="carrot"
+              width="282"
+              heiht="243"
+            />
+          </li>
+        </ul>
+      </div>
+    </section>
   </body>
 </html>
