--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <section class="sas">
+    <!-- <section class="sas">
       <div class="con-c container">
         <div class="vav"></div>
         <div class="mom"></div>
       </div>
-    </section>
-    <section></section>
+    </section> -->
+
     <section class="vegetables-section">
       <div class="container">
         <h2 class="section-title">organic <span>vegetables</span></h2>
@@ -94,6 +94,24 @@
             />
           </li>
         </ul>
+      </div>
+    </section>
+    <section class="discount-section">
+      <div class="discount container">
+        <h2 class="visually-hidden">Discount</h2>
+        <p class="discount-text">
+          <span class="discount-span">Discount up to 40%! </span>
+          Taste the vitamins and keep your health
+        </p>
+      </div>
+    </section>
+    <section class="discount-sec">
+      <div class="discount-div container">
+        <h2 class="visually-hidden">Discount</h2>
+        <p class="dis-p">
+          <span class="span-p">Discount up to 40%!</span>Taste the vitamins and
+          keep your health
+        </p>
       </div>
     </section>
   </body>
