--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
+    <section class="hero">
+      <div class="hero-container container">
+        <h1 class="hero-title">organic vegetables to your diet today!</h1>
+        <p class="hero-text">
+          Our expertly curated vegetable baskets are made with the freshest,
+          highest quality vegetables available. Fresh Harvest Box has got you
+          covered. Fresh, high-quality vegetables in expertly curated vegetable
+          baskets delivered to you.
+        </p>
+      </div>
+    </section>
     <!-- <section class="sas">
       <div class="con-c container">
         <div class="vav"></div>
@@ -18,7 +29,7 @@
       </div>
     </section> -->
 
-    <section class="vegetables-section">
+    <!-- <section class="vegetables-section">
       <div class="container">
         <h2 class="section-title">organic <span>vegetables</span></h2>
         <p class="vegetables-section-text">
@@ -95,7 +106,7 @@
           </li>
         </ul>
       </div>
-    </section>
+    </section> -->
     <section class="discount-section">
       <div class="discount container">
         <h2 class="visually-hidden">Discount</h2>
@@ -114,5 +125,35 @@
         </p>
       </div>
     </section>
+    <div class="green">
+      <a class="peshka" href="">
+        <svg class="green-svg" width="18" heiht="18">
+          <use href="./images/icons.svg#icon-logo.svg"></use>
+        </svg>
+        green.harvest
+      </a>
+    </div>
+    <!-- <section class="class container">
+      <ul class="ul-ul">
+        <li class="ul-item">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis
+          veniam alias facilis odit numquam eveniet natus reiciendis saepe quis
+          aut fuga, corporis tempore quaerat quibusdam accusantium ipsa
+          distinctio modi voluptatem.
+        </li>
+        <li class="ul-item">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis
+          veniam alias facilis odit numquam eveniet natus reiciendis saepe quis
+          aut fuga, corporis tempore quaerat quibusdam accusantium ipsa
+          distinctio modi voluptatem.
+        </li>
+        <li class="ul-item">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis
+          veniam alias facilis odit numquam eveniet natus reiciendis saepe quis
+          aut fuga, corporis tempore quaerat quibusdam accusantium ipsa
+          distinctio modi voluptatem.
+        </li>
+      </ul>
+    </section> -->
   </body>
 </html>
