--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>hello</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
@@ -11,129 +17,243 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <section class="hero">
-      <div class="hero-container container">
-        <h1 class="hero-title">organic vegetables to your diet today!</h1>
-        <p class="hero-text">
-          Our expertly curated vegetable baskets are made with the freshest,
-          highest quality vegetables available. Fresh Harvest Box has got you
-          covered. Fresh, high-quality vegetables in expertly curated vegetable
-          baskets delivered to you.
-        </p>
+    <header class="top">
+      <div class="header container">
+        <a class="logo-link" href="./index.html">
+          <svg class="logo-icon" width="16" height="16">
+            <use href="./images/icons.svg#icon-logo.svg"></use>
+          </svg>
+          <svg class="logo-text" width="148" height="12">
+            <use href="./images/icons.svg#icon-logo-text.svg"></use>
+          </svg>
+        </a>
+
+        <button class="btn-menu" type="button">
+          <svg class="icon-burger" width="32" height="32">
+            <use href="./images/icons.svg#icon-burger.svg"></use>
+          </svg>
+        </button>
+        <div class="nav-container">
+          <nav class="navigation">
+            <ul class="header-list">
+              <li>
+                <a class="header-link" href="#works">How It Works</a>
+              </li>
+              <li>
+                <a class="header-link" href="#vegetables">Vegetables</a>
+              </li>
+              <li>
+                <a class="header-link" href="#reviews">Reviews</a>
+              </li>
+            </ul>
+          </nav>
+          <a class="button-header" href="#harwest">Shop now</a>
+        </div>
       </div>
-    </section>
-    <!-- <section class="sas">
+      <div class="backdrop is-open">
+        <div class="menu-mobile">
+          <button class="btn-close" type="button">
+            <svg class="icon-close" width="32" height="32">
+              <use href="./images/icons.svg#icon-close.svg"></use>
+            </svg>
+          </button>
+          <nav class="nav-mobile">
+            <ul class="menu-list">
+              <li class="menu-item">
+                <a class="menu-link" href="#works">How It Works</a>
+              </li>
+              <li class="menu-item">
+                <a class="menu-link" href="#vegetables">Vegetables</a>
+              </li>
+
+              <li class="menu-item">
+                <a class="menu-link" href="#reviews">Reviews</a>
+              </li>
+            </ul>
+          </nav>
+          <a class="button-menu-mobile" href="#harwest">Shop now</a>
+        </div>
+      </div>
+    </header>
+
+    <main>
+      <section class="hero">
+        <div class="hero-container container">
+          <div class="hero-text-con">
+            <h1 class="hero-title">organic vegetables to your diet today!</h1>
+            <p class="hero-text">
+              Our expertly curated vegetable baskets are made with the freshest,
+              highest quality vegetables available. Fresh Harvest Box has got
+              you covered. Fresh, high-quality vegetables in expertly curated
+              vegetable baskets delivered to you.
+            </p>
+          </div>
+        </div>
+        <div class="hero-img"></div>
+      </section>
+      <!-- <section class="sas">
       <div class="con-c container">
         <div class="vav"></div>
         <div class="mom"></div>
       </div>
     </section> -->
+      <section class="section-work" id="works">
+        <div class="work-container container">
+          <h2 class="visually-hidden">how it works</h2>
+          <div class="shadow">
+            <div class="shadow-img">
+              <picture>
+                <source
+                  media="(max-width:767px)"
+                  srcset="./images/work-mob.jpg 1x, ./images/work-mob@2x.jpg 2x"
+                />
+                <source
+                  media="(max-width:1279px)"
+                  srcset="./images/work-tab.jpg 1x, ./images/work-tab@2x.jpg 2x"
+                />
+                <source
+                  media="(min-width:1280px)"
+                  srcset="./images/work-des.jpg 1x, ./images/work-des@2x.jpg 2x"
+                />
+                <img
+                  class="work-img"
+                  srcset="./images/work-tab.jpg 1x, ./images/work-tab@2x.jpg 2x"
+                  src="./images/work-tab.jpg"
+                  alt=""
+                />
+              </picture>
+            </div>
+          </div>
+          <div class="how-it-works">
+            <h3 class="work-subtitle">
+              To order your <span>vegetable</span> basket, simply follow these
+              <span>easy steps</span>
+            </h3>
+            <p class="work-text">
+              Our baskets are assembled with care and delivered straight to your
+              doorstep, so you can enjoy the taste of fresh fruit without ever
+              leaving your home.
+            </p>
+            <ol class="work-list">
+              <li class="work-item">
+                <p class="work-item-text">
+                  Just choose the vegetable you want to order by clicking on the
+                  checkboxes next to it.
+                </p>
+              </li>
+              <li class="work-item">
+                <p class="work-item-text">
+                  Click on the basket and fill out the form.
+                </p>
+              </li>
+              <li class="work-item">
+                <p class="work-item-text">
+                  Sit back and relax! Your fresh vegetables basket will be
+                  delivered.
+                </p>
+              </li>
+            </ol>
+          </div>
+        </div>
+      </section>
+      <section class="discount-section" id="harwest">
+        <div class="discount container">
+          <h2 class="visually-hidden">Discount</h2>
+          <p class="discount-text">
+            <span class="discount-span">Discount up to 40%! </span>
+            Taste the vitamins and keep your health
+          </p>
+        </div>
+      </section>
+      <section class="vegetables-section" id="vegetables">
+        <div class="container">
+          <h2 class="section-title">organic <span>vegetables</span></h2>
+          <p class="vegetables-section-text">
+            Our organic vegetables are hand-picked from local farms and
+            delivered straight to your doorstep, ensuring that you get the
+            freshest and most nutritious produce possible.
+          </p>
+          <ul class="vegetables-list">
+            <li class="vegetables-item">
+              <h3 class="vegetables-subtitle">eggplant</h3>
+              <p class="vegetables-text">60 uah/kg</p>
+              <img
+                srcset="./images/eggplant.png 1x, ./images/eggplant@2x.png 2x"
+                src="./images/eggplant.png"
+                alt="eggplant"
+                width="282"
+                heiht="243"
+              />
+            </li>
+            <li class="vegetables-item">
+              <h3 class="vegetables-subtitle">leek</h3>
+              <p class="vegetables-text">50 uah/kg</p>
+              <img
+                srcset="./images/leek.png 1x, ./images/leek@2x.png 2x"
+                src="./images/leek.png"
+                alt="leek"
+                width="282"
+                heiht="243"
+              />
+            </li>
+            <li class="vegetables-item">
+              <h3 class="vegetables-subtitle">mushrooms</h3>
+              <p class="vegetables-text">40 uah/kg</p>
+              <img
+                srcset="./images/mushrooms.png 1x, ./images/mushrooms@2x.png 2x"
+                src="./images/mushrooms.png"
+                alt="mushrooms"
+                width="282"
+                heiht="243"
+              />
+            </li>
+            <li class="vegetables-item">
+              <h3 class="vegetables-subtitle">corn</h3>
+              <p class="vegetables-text">60 uah/kg</p>
+              <img
+                srcset="./images/corn.png 1x, ./images/corn@2x.png 2x"
+                src="./images/corn.png"
+                alt="corn"
+                width="282"
+                heiht="243"
+              />
+            </li>
+            <li class="vegetables-item">
+              <h3 class="vegetables-subtitle">sweet potatoes</h3>
+              <p class="vegetables-text">50 uah/kg</p>
+              <img
+                srcset="./images/potatoes.png 1x, ./images/potatoes@2x.png 2x"
+                src="./images/potatoes.png"
+                alt="potatoes"
+                width="282"
+                heiht="243"
+              />
+            </li>
+            <li class="vegetables-item">
+              <h3 class="vegetables-subtitle">carrot</h3>
+              <p class="vegetables-text">40 uah/kg</p>
+              <img
+                srcset="./images/carrot.png 1x, ./images/carrot@2x.png 2x"
+                src="./images/carrot.png"
+                alt="carrot"
+                width="282"
+                heiht="243"
+              />
+            </li>
+          </ul>
+        </div>
+      </section>
 
-    <!-- <section class="vegetables-section">
-      <div class="container">
-        <h2 class="section-title">organic <span>vegetables</span></h2>
-        <p class="vegetables-section-text">
-          Our organic vegetables are hand-picked from local farms and delivered
-          straight to your doorstep, ensuring that you get the freshest and most
-          nutritious produce possible.
-        </p>
-        <ul class="vegetables-list">
-          <li class="vegetables-item">
-            <h3 class="vegetables-subtitle">eggplant</h3>
-            <p class="vegetables-text">60 uan/kg</p>
-            <img
-              srcset="./images/eggplant.png 1x, ./images/eggplant@2x.png 2x"
-              src="./images/eggplant.png"
-              alt="eggplant"
-              width="282"
-              heiht="243"
-            />
-          </li>
-          <li class="vegetables-item">
-            <h3 class="vegetables-subtitle">leek</h3>
-            <p class="vegetables-text">50 uan/kg</p>
-            <img
-              srcset="./images/leek.png 1x, ./images/leek@2x.png 2x"
-              src="./images/leek.png"
-              alt="leek"
-              width="282"
-              heiht="243"
-            />
-          </li>
-          <li class="vegetables-item">
-            <h3 class="vegetables-subtitle">mushrooms</h3>
-            <p class="vegetables-text">40 uan/kg</p>
-            <img
-              srcset="./images/mushrooms.png 1x, ./images/mushrooms@2x.png 2x"
-              src="./images/mushrooms.png"
-              alt="mushrooms"
-              width="282"
-              heiht="243"
-            />
-          </li>
-          <li class="vegetables-item">
-            <h3 class="vegetables-subtitle">corn</h3>
-            <p class="vegetables-text">60 uan/kg</p>
-            <img
-              srcset="./images/corn.png 1x, ./images/corn@2x.png 2x"
-              src="./images/corn.png"
-              alt="corn"
-              width="282"
-              heiht="243"
-            />
-          </li>
-          <li class="vegetables-item">
-            <h3 class="vegetables-subtitle">sweet potatoes</h3>
-            <p class="vegetables-text">50 uan/kg</p>
-            <img
-              srcset="./images/potatoes.png 1x, ./images/potatoes@2x.png 2x"
-              src="./images/potatoes.png"
-              alt="potatoes"
-              width="282"
-              heiht="243"
-            />
-          </li>
-          <li class="vegetables-item">
-            <h3 class="vegetables-subtitle">carrot</h3>
-            <p class="vegetables-text">40 uan/kg</p>
-            <img
-              srcset="./images/carrot.png 1x, ./images/carrot@2x.png 2x"
-              src="./images/carrot.png"
-              alt="carrot"
-              width="282"
-              heiht="243"
-            />
-          </li>
-        </ul>
-      </div>
-    </section> -->
-    <section class="discount-section">
-      <div class="discount container">
-        <h2 class="visually-hidden">Discount</h2>
-        <p class="discount-text">
-          <span class="discount-span">Discount up to 40%! </span>
-          Taste the vitamins and keep your health
-        </p>
-      </div>
-    </section>
-    <section class="discount-sec">
-      <div class="discount-div container">
-        <h2 class="visually-hidden">Discount</h2>
-        <p class="dis-p">
-          <span class="span-p">Discount up to 40%!</span>Taste the vitamins and
-          keep your health
-        </p>
-      </div>
-    </section>
-    <div class="green">
-      <a class="peshka" href="">
-        <svg class="green-svg" width="18" heiht="18">
-          <use href="./images/icons.svg#icon-logo.svg"></use>
-        </svg>
-        green.harvest
-      </a>
-    </div>
-    <!-- <section class="class container">
+      <!-- <section class="discount-sec">
+        <div class="discount-div container">
+          <h2 class="visually-hidden">Discount</h2>
+          <p class="dis-p">
+            <span class="span-p">Discount up to 40%!</span>Taste the vitamins
+            and keep your health
+          </p>
+        </div>
+      </section> -->
+      <!-- <section class="class container">
       <ul class="ul-ul">
         <li class="ul-item">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis
@@ -155,5 +275,69 @@
         </li>
       </ul>
     </section> -->
+    </main>
+    <footer class="footer">
+      <div class="footer-container container">
+        <div>
+          <a class="logo-link" href="./index.html">
+            <svg class="logo-icon" width="16" height="16">
+              <use href="./images/icons.svg#icon-logo.svg"></use>
+            </svg>
+            <svg class="logo-text" width="148" height="12">
+              <use href="./images/icons.svg#icon-logo-text.svg"></use>
+            </svg>
+          </a>
+          <p class="footer-text">
+            Whether you're looking for a healthy snack or a thoughtful gift, our
+            fruit baskets are the perfect choice.
+          </p>
+        </div>
+
+        <div class="nav-add">
+          <nav class="footer-navigation">
+            <ul class="footer-list">
+              <li>
+                <a class="footer-link" href="#works">How It Works</a>
+              </li>
+              <li>
+                <a class="footer-link" href="#vegetables">Vegetables</a>
+              </li>
+              <li>
+                <a class="footer-link" href="#reviews">Reviews</a>
+              </li>
+            </ul>
+          </nav>
+          <address class="footer-address">
+            <ul class="address-list">
+              <li>
+                <a class="footer-add" href="tel:+380684439426"
+                  >+380 (68) 443-94-26</a
+                >
+              </li>
+              <li>
+                <a
+                  class="footer-add"
+                  href="https://maps.app.goo.gl/GiQVn1s6yyVKMvyG9"
+                  >1678 S. Pioneer Road Salt Lake City UT 84104</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+      </div>
+      <div class="footer-bottom container">
+        <ul class="footer-bottom-list">
+          <li>
+            <a class="footer-bottom-item" href="">
+              Privacy Policy <span class="footer-span">&#47;</span></a
+            >
+          </li>
+          <li><a class="footer-bottom-item" href="">Cookie settings</a></li>
+        </ul>
+        <p class="footer-bottom-item"><span>&#xa9;</span>Green Harvest 2023</p>
+      </div>
+    </footer>
+    <!-- <script src="./js/task-1"></script> -->
+    <script src="./js/task-2"></script>
   </body>
 </html>
