--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
               </li>
             </ul>
           </nav>
-          <a class="button-header" href="#harwest">Shop now</a>
+          <a class="button-header" href="#covered">Shop now</a>
         </div>
       </div>
-      <div class="backdrop is-open">
+      <div class="backdrop">
         <div class="menu-mobile">
           <button class="btn-close" type="button">
             <svg class="icon-close" width="32" height="32">
@@ -71,7 +71,7 @@
               </li>
             </ul>
           </nav>
-          <a class="button-menu-mobile" href="#harwest">Shop now</a>
+          <a class="button-menu-mobile" href="#covered">Shop now</a>
         </div>
       </div>
     </header>
@@ -88,15 +88,9 @@
               vegetable baskets delivered to you.
             </p>
           </div>
+          <div class="hero-img"></div>
         </div>
-        <div class="hero-img"></div>
       </section>
-      <!-- <section class="sas">
-      <div class="con-c container">
-        <div class="vav"></div>
-        <div class="mom"></div>
-      </div>
-    </section> -->
       <section class="section-work" id="works">
         <div class="work-container container">
           <h2 class="visually-hidden">how it works</h2>
@@ -122,6 +116,7 @@
                   alt=""
                 />
               </picture>
+              <span class="overlay"></span>
             </div>
           </div>
           <div class="how-it-works">
@@ -137,19 +132,19 @@
             <ol class="work-list">
               <li class="work-item">
                 <p class="work-item-text">
-                  Just choose the vegetable you want to order by clicking on the
-                  checkboxes next to it.
+                  Just choose the <span>vegetable</span>you want to order by
+                  clicking on the checkboxes <span>next to it.</span>
                 </p>
               </li>
               <li class="work-item">
                 <p class="work-item-text">
-                  Click on the basket and fill out the form.
+                  Click on the <span>basket</span>and fill out the form.
                 </p>
               </li>
               <li class="work-item">
                 <p class="work-item-text">
-                  Sit back and relax! Your fresh vegetables basket will be
-                  delivered.
+                  Sit back and relax! Your <span>fresh vegetables</span> basket
+                  will be delivered.
                 </p>
               </li>
             </ol>
@@ -243,38 +238,150 @@
           </ul>
         </div>
       </section>
-
-      <!-- <section class="discount-sec">
-        <div class="discount-div container">
-          <h2 class="visually-hidden">Discount</h2>
-          <p class="dis-p">
-            <span class="span-p">Discount up to 40%!</span>Taste the vitamins
-            and keep your health
+      <section class="reviews" id="reviews">
+        <div class="container">
+          <h2 class="reviews-title">reviews from our <span>customers</span></h2>
+          <p class="reviews-text">
+            Words of our customers: impressions and opinions about the quality
+            of our services and the freshness of our products.
           </p>
+          <ul class="reviews-list">
+            <li class="reviews-item">
+              <img
+                class="reviews-img"
+                srcset="./images/john.jpg 1x, ./images/john@2x.jpg 2x"
+                src="./images/john.jpg"
+                alt="John Wax"
+              />
+
+              <h3 class="reviews-subtitle">John Wax</h3>
+              <p class="reviews-item-text">
+                These vegetables are my secret to delicious and healthy meals.
+                The quality is always at the highest level, the aroma and taste
+                are enchanting. I advise every fan of real products!
+              </p>
+            </li>
+            <li class="reviews-item">
+              <img
+                class="reviews-img"
+                srcset="./images/victoria.jpg 1x, ./images/victoria@2x.jpg 2x"
+                src="./images/victoria.jpg"
+                alt="Victoria Romashenko"
+              />
+
+              <h3 class="reviews-subtitle">Victoria Romashenko</h3>
+              <p class="reviews-item-text">
+                I love how fast and fresh the vegetables are delivered. Salads
+                always turn out so appetizing, and soups are real masterpieces.
+                The quality is impeccable!
+              </p>
+            </li>
+            <li class="reviews-item">
+              <img
+                class="reviews-img"
+                srcset="./images/ihor.jpg 1x, ./images/ihor@2x.jpg 2x"
+                src="./images/ihor.jpg"
+                alt="Ihor Trachuk"
+              />
+
+              <h3 class="reviews-subtitle">Ihor Trachuk</h3>
+              <p class="reviews-item-text">
+                Recently tried my fresh tomatoes and peppers - amazing! The
+                authenticity of the taste, as if from the garden directly to my
+                table. It is now my main vegetable supplier.
+              </p>
+            </li>
+          </ul>
         </div>
-      </section> -->
-      <!-- <section class="class container">
-      <ul class="ul-ul">
-        <li class="ul-item">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis
-          veniam alias facilis odit numquam eveniet natus reiciendis saepe quis
-          aut fuga, corporis tempore quaerat quibusdam accusantium ipsa
-          distinctio modi voluptatem.
-        </li>
-        <li class="ul-item">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis
-          veniam alias facilis odit numquam eveniet natus reiciendis saepe quis
-          aut fuga, corporis tempore quaerat quibusdam accusantium ipsa
-          distinctio modi voluptatem.
-        </li>
-        <li class="ul-item">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis
-          veniam alias facilis odit numquam eveniet natus reiciendis saepe quis
-          aut fuga, corporis tempore quaerat quibusdam accusantium ipsa
-          distinctio modi voluptatem.
-        </li>
-      </ul>
-    </section> -->
+      </section>
+      <section class="covered" id="covered">
+        <div class="covered-container container">
+          <h2 class="covered-title">
+            Fresh <span>Harvest</span> Box has got you covered
+          </h2>
+          <p class="covered-text">
+            Our boxes are packed with delicious, nutritious vegetables, perfect
+            for anyone looking to eat healthier or support local farmers. Order
+            your box today and start enjoying the best that nature has to offer!
+          </p>
+          <div>
+            <div class="form-container">
+              <p class="form-title">
+                Ordering <span class="from-us">from us</span> is quick and easy!
+                Fill out <span class="the-form">the form</span> below and we
+                will contact you!
+              </p>
+              <form class="form">
+                <label>
+                  <input class="input" type="text" placeholder="Full Name" />
+                </label>
+                <label>
+                  <input class="input" type="email" placeholder="Email" />
+                </label>
+                <label for="">
+                  <textarea class="textarea" placeholder="Comment"></textarea>
+                </label>
+              </form>
+              <button class="btn-form" type="submit">Send</button>
+            </div>
+            <div class="covered-soc-container">
+              <div class="con-img">
+                <picture>
+                  <source
+                    media="(max-width:767px)"
+                    srcset="
+                      ./images/form-mob.jpg    1x,
+                      ./images/form-mob@2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(max-width:1279px)"
+                    srcset="
+                      ./images/form-tab.jpg    1x,
+                      ./images/form-tab@2x.jpg 2x
+                    "
+                  />
+                  <source
+                    media="(min-width:1280px)"
+                    srcset="
+                      ./images/form-des.jpg    1x,
+                      ./images/form-des@2x.jpg 2x
+                    "
+                  />
+                  <img
+                    class="covered-img"
+                    srcset="
+                      ./images/form-tab.jpg    1x,
+                      ./images/form-tab@2x.jpg 2x
+                    "
+                    src="./images/form-tab.jpg"
+                    alt=""
+                  />
+                </picture>
+                <span class="shadow"></span>
+              </div>
+              <p class="covered-soc-text">Follow us on our social networks:</p>
+              <ul class="soc-list">
+                <li class="soc-item">
+                  <a class="soc-link" href="https://www.instagram.com/goitclub/"
+                    >instagram<span>&#47;</span></a
+                  >
+                </li>
+                <li class="soc-item">
+                  <a class="soc-link" href="https://www.facebook.com/goITclub/"
+                    >facebook<span>&#47;</span></a
+                  >
+                </li>
+                <li class="soc-item">
+                  <a class="soc-link" href="https://www.youtube.com/c/GoIT"
+                    >youtube</a
+                  >
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer class="footer">
       <div class="footer-container container">
@@ -338,6 +445,6 @@
       </div>
     </footer>
     <!-- <script src="./js/task-1"></script> -->
-    <script src="./js/task-2"></script>
+    <script src="./js/close.js"></script>
   </body>
 </html>
