--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                     alt=""
                   />
                 </picture>
-                <span class="shadow"></span>
+                <span class="shadow-form"></span>
               </div>
               <p class="covered-soc-text">Follow us on our social networks:</p>
               <ul class="soc-list">
