--- a/index.html
+++ b/index.html
@@ -259,7 +259,8 @@
               />
               <p class="vegetables-overlay">
                 Carrots contain a lot of vitamin A, which takes care of the
-                condition of the mucous membranes and skin.
+                condition of the mucous membranes, skin and resists weakening of
+                vision.
               </p>
             </li>
           </ul>
@@ -349,7 +350,7 @@
                       pattern="^[A-Za-z]+ [A-Za-z]+$"
                       required
                     />
-                    <span class="label"></span>
+                    <span class="span-form"></span>
                   </label>
                   <label>
                     <input
@@ -360,7 +361,7 @@
                       pattern="([A-z0-9_.-]{1,})@([A-z0-9_.-]{1,}).([A-z]{2,8})"
                       required
                     />
-                    <span class="label"></span>
+                    <span class="span-form"></span>
                   </label>
                   <label>
                     <textarea class="textarea" placeholder="Comment"></textarea>
@@ -411,6 +412,7 @@
                   <li class="soc-item">
                     <a
                       class="soc-link"
+                      target="_blank"
                       href="https://www.instagram.com/goitclub/"
                       >instagram<span>&#47;</span></a
                     >
@@ -418,12 +420,16 @@
                   <li class="soc-item">
                     <a
                       class="soc-link"
+                      target="_blank"
                       href="https://www.facebook.com/goITclub/"
                       >facebook<span>&#47;</span></a
                     >
                   </li>
                   <li class="soc-item">
-                    <a class="soc-link" href="https://www.youtube.com/c/GoIT"
+                    <a
+                      class="soc-link"
+                      target="_blank"
+                      href="https://www.youtube.com/c/GoIT"
                       >youtube</a
                     >
                   </li>
