--- a/index.html
+++ b/index.html
@@ -493,13 +493,13 @@
       <div class="footer-bottom container">
         <ul class="footer-bottom-list">
           <li>
-            <a class="footer-bottom-item" href="">
+            <a class="footer-bottom-link" href="">
               Privacy Policy <span class="footer-span">&#47;</span></a
             >
           </li>
-          <li><a class="footer-bottom-item" href="">Cookie settings</a></li>
+          <li><a class="footer-bottom-link" href="">Cookie settings</a></li>
         </ul>
-        <p class="footer-bottom-item"><span>&#xa9;</span>Green Harvest 2023</p>
+        <p class="footer-bottom-text"><span>&#xa9;</span>Green Harvest 2023</p>
       </div>
     </footer>
     <!-- <script src="./js/scroll"></script> -->
