--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
     <footer class="footer">
       <div class="footer-container container">
         <div>
-          <a class="logo-link" href="./index.html">
+          <a class="logo-link-footer" href="./index.html">
             <svg class="logo-icon" width="16" height="16">
               <use href="./images/icons.svg#icon-logo.svg"></use>
             </svg>
