--- a/index.html
+++ b/index.html
@@ -414,16 +414,18 @@
                       class="soc-link"
                       target="_blank"
                       href="https://www.instagram.com/goitclub/"
-                      >instagram<span>&#47;</span></a
+                      >instagram</a
                     >
+                    <span class="soc-link-span">&#47;</span>
                   </li>
                   <li class="soc-item">
                     <a
                       class="soc-link"
                       target="_blank"
                       href="https://www.facebook.com/goITclub/"
-                      >facebook<span>&#47;</span></a
+                      >facebook</a
                     >
+                    <span class="soc-link-span">&#47;</span>
                   </li>
                   <li class="soc-item">
                     <a
@@ -493,9 +495,8 @@
       <div class="footer-bottom container">
         <ul class="footer-bottom-list">
           <li>
-            <a class="footer-bottom-link" href="">
-              Privacy Policy <span class="footer-span">&#47;</span></a
-            >
+            <a class="footer-bottom-link" href=""> Privacy Policy</a>
+            <span class="footer-span">&#47;</span>
           </li>
           <li><a class="footer-bottom-link" href="">Cookie settings</a></li>
         </ul>
