--- a/index.html
+++ b/index.html
@@ -416,8 +416,8 @@
                       href="https://www.instagram.com/goitclub/"
                       >instagram</a
                     >
-                    <span class="soc-link-span">&#47;</span>
                   </li>
+                  <li><span class="soc-link-span">&#47;</span></li>
                   <li class="soc-item">
                     <a
                       class="soc-link"
@@ -425,8 +425,8 @@
                       href="https://www.facebook.com/goITclub/"
                       >facebook</a
                     >
-                    <span class="soc-link-span">&#47;</span>
                   </li>
+                  <li><span class="soc-link-span">&#47;</span></li>
                   <li class="soc-item">
                     <a
                       class="soc-link"
@@ -496,8 +496,8 @@
         <ul class="footer-bottom-list">
           <li>
             <a class="footer-bottom-link" href=""> Privacy Policy</a>
-            <span class="footer-span">&#47;</span>
           </li>
+          <li><span class="footer-span">&#47;</span></li>
           <li><a class="footer-bottom-link" href="">Cookie settings</a></li>
         </ul>
         <p class="footer-bottom-text"><span>&#xa9;</span>Green Harvest 2023</p>
